# stayfolio-bot

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build.yml  cron.yml  cron_action.yml
src/: main.rs  room_list.rs
