[package]
name = "stayfolio-bot"
version = "0.1.0"
authors = ["ben.jeong <ben.jeong@kakaocorp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tco = "*"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json", "gzip"] }
tokio = { version = "0.2", features = ["full"] }
telegram-bot = "0.7.0"
lazy_static = "1.4"